<resources>
    <string name="app_name">nMedia</string>
    <string name="nmedia">NMedia!!!!!!!!!</string>
    <string name="PostAuthor">Нетология. Университет интернет-профессий будущего</string>
    <string name="PostPublished">01 февраля в 22:52</string>
    <string name="PostContent">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="NumberLike">10</string>
    <string name="numberShare">4</string>
    <string name="numberView">24</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="toast_content">Content can`t be empty</string>
    <string name="edit_tv">Редактирование</string>
    <string name="quantity">123</string>
    <string name="shooser_intent_post">Поделиться</string>
    <string name="error_empty_content">Нельзя поделиться</string>
    <string name="post_texts">Введите текст</string>
    <string name="post_url_video">Введите URL</string>
    <string name="channel_remote_name">Уведомление с сервера</string>
    <string name="channel_remote_description">Уведомление с удаленного сервера</string>
    <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
    <string name="notification_user_post">%1$s опубликовал новый пост: </string>
    <string name="error_loading">Что-то пошло не так. Попробуйте позднее</string>
    <string name="retry_loading">Повторить</string>
    <string name="empty_posts">Постов нет.\nЕсли создадите новый пост, то он появится здесь</string>
    <string name="google_play_unavailable">Google Api Недоступно</string>
</resources>