<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/authorTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/PostAuthor"
        app:layout_constraintBottom_toTopOf="@+id/publishedTv"
        app:layout_constraintEnd_toStartOf="@+id/menuIb"
        app:layout_constraintStart_toEndOf="@+id/avatarV"
        app:layout_constraintTop_toTopOf="@+id/avatarV"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/publishedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/PostPublished"
        app:layout_constraintBottom_toBottomOf="@+id/avatarV"
        app:layout_constraintStart_toEndOf="@+id/avatarV"
        app:layout_constraintTop_toBottomOf="@+id/authorTv"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/avatarV"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageButton
        android:id="@+id/menuIb"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/authorTv"
        app:srcCompat="@drawable/menu_avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/publishedBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="authorTv, publishedTv, authorTv" />

    <TextView
        android:id="@+id/contentTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="web"
        android:text="@string/PostContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publishedBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/publishedBarrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="contentTv" />

    <ImageButton
        android:id="@+id/likeIb"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publishedBarrier2"
        app:srcCompat="@drawable/like_avatar" />

    <TextView
        android:id="@+id/numberLikeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/NumberLike"
        app:layout_constraintBottom_toBottomOf="@+id/likeIb"
        app:layout_constraintStart_toEndOf="@+id/likeIb"
        app:layout_constraintTop_toTopOf="@+id/likeIb" />

    <ImageButton
        android:id="@+id/shareIb"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/numberLikeTv"
        app:layout_constraintTop_toBottomOf="@id/publishedBarrier2"
        app:srcCompat="@drawable/share_avatar" />

    <TextView
        android:id="@+id/numberShareTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/numberShare"
        app:layout_constraintBottom_toBottomOf="@+id/shareIb"
        app:layout_constraintStart_toEndOf="@+id/shareIb"
        app:layout_constraintTop_toTopOf="@+id/shareIb" />

    <ImageButton
        android:id="@+id/viewIb"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/numberViewTv"
        app:layout_constraintEnd_toStartOf="@+id/numberViewTv"
        app:layout_constraintTop_toBottomOf="@id/publishedBarrier2"
        app:layout_constraintTop_toTopOf="@+id/numberViewTv"
        app:srcCompat="@drawable/view_avatar" />

    <TextView
        android:id="@+id/numberViewTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/numberView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publishedBarrier2" />




</androidx.constraintlayout.widget.ConstraintLayout>